--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "Speak It",
 	"short_name": "Speak It",
-	"description": "A simple Progressive Web App that turns text to speach.",
+	"description": "A simple Progressive Web App that turns text to speach, using the OpenAI TTS API.",
 	"start_url": "index.html",
 	"display": "standalone",
 	"background_color": "#121c2d",
